# agentcontainers

./: .air.toml  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yml  .mcp.json  .mise.toml  .release-please-manifest.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-MIT  README.md  SECURITY.md  agentcontainer.json  go.mod  go.sum  release-please-config.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  integration.yml  release-please.yml  release.yml  rust.yml
cmd/ac/: main.go
cmd/agentcontainer/: main.go
cmd/agentcontainer-redteam-codex/: Dockerfile  main.go
docs/: astro.config.mjs  package.json
enforcer/: .dockerignore  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.stub  docker-compose.test.yml  docker-compose.yml  rust-toolchain.toml
enforcer/.cargo/: config.toml
enforcer/ac-common/: Cargo.toml
enforcer/ac-common/src/: bundle.rs  events.rs  lib.rs  siphash.rs
enforcer/ac-common/tests/: events_test.rs  helpers_test.rs  maps_test.rs  siphash_test.rs
enforcer/ac-ebpf/: Cargo.toml
enforcer/ac-ebpf/src/: maps.rs
enforcer/ac-ebpf/src/lsm/: bprm_check.rs  file_open.rs  mod.rs
enforcer/ac-ebpf/src/network/: connect.rs  dns.rs  mod.rs  sendmsg.rs
enforcer/ac-enforcer/: Cargo.toml  build.rs
enforcer/agentcontainer-common/: Cargo.toml
enforcer/agentcontainer-ebpf/: Cargo.toml
enforcer/agentcontainer-ebpf/src/: maps.rs
enforcer/agentcontainer-ebpf/src/lsm/: bprm_check.rs  dup_check.rs  file_open.rs
enforcer/agentcontainer-ebpf/src/network/: bind.rs  connect.rs  dns.rs  sendmsg.rs
enforcer/agentcontainer-ebpf/src/process/: exit.rs  fork.rs  memfd.rs
enforcer/agentcontainer-enforcer/: Cargo.toml  build.rs
enforcer/config/: enforcer.yaml
enforcer/xtask/: Cargo.toml
examples/aider/: agentcontainer.json
examples/claude-code/: agentcontainer.json
examples/codex/: agentcontainer.json
examples/goose/: agentcontainer.json
examples/infisical/: README.md  agentcontainer.json  docker-compose.yml
examples/minimal/: README.md  (+1 more)
prd/: PRD-008-enforcer-hook-expansion.md
(+293 files in other folders)
